--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npm i -g react-scripts",
     "start": "nodemon app.js",
     "postinstall": "cd react-frontend && npm run build",
     "server": "nodemon app.js",
