--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "preinstall": "cd react-frontend && npm install",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "postinstall": "cd react-frontend && npm run build",
     "server": "nodemon app.js",
     "client": "cd react-frontend && npm start",
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
